--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,155 @@
     transform: rotate(360deg);
   }
 }
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 10vh;
+  background: rgb(73, 79, 82);
+  color: white;
+}
+
+.nav-links {
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+}
+
+.delete-icon {
+  font-size: 25px;
+  margin-left: 15px;
+}
+
+.media-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: left;
+}
+
+.priority-text {
+  width: 40px;
+  text-align: center;
+}
+
+.save-button {
+  margin-left: 30px;
+}
+
+.schedule-row {
+  font-size: 14px;
+}
+
+.schedule-table {
+  margin-top: 8px;
+}
+
+.schedule-head {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.LoginBG {
+  /*background-color: blueviolet;*/
+  background-color: #343a40;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.MediaCard {
+  border-radius: 5px;
+  background-color: whitesmoke;
+  border: 1px solid #ddd;
+  min-width: 20em;
+  width: 90%;
+  padding: 5px;
+  margin-top: 0.75rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.CardContent {
+  display: flex;
+}
+
+.CardContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  min-width: 500px;
+  background-color: #282c34;
+}
+
+.CardBody {
+  margin: auto 0;
+  padding-left: 5px;
+  font-size: 1.25rem;
+}
+
+.Icon {
+  display: block;
+  border-radius: 50%;
+  font-size: 3.5rem;
+  background-color: #ddd;
+  padding: 5px;
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.Delete {
+  font-size: 2rem;
+  margin: auto 0;
+  margin-right: 15px;
+}
+
+.LoginCard {
+  min-width: 300px;
+  max-width: 500px;
+  padding: 20px;
+  background-color: whitesmoke;
+  text-align: left;
+}
+
+.FileCard {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  padding: 5px;
+  margin-top: 5px;
+}
+
+.upload-container {
+  border: 1px solid #ddd;
+}
+
+.dropfile {
+  min-height: 2rem;
+  display: grid;
+  place-content: center;
+  border-bottom: 1px solid #ddd;
+  padding: 5px;
+}
+
+.filelist-container {
+  padding: 10px;
+  text-align: left;
+  max-height: 400px;
+}
+
+.browse-link {
+  text-decoration: underline;
+}
+.hidden {
+  display: none;
+}
+
+.dropdown-menu {
+  max-height: 200px;
+  overflow-y: scroll;
+}
